--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "url": "git+https://github.com/monoplasty/vue-monoplasty-slide-verify.git"
   },
   "dependencies": {
+    "crypto-js": "^4.0.0",
     "vue": "^2.5.11"
   },
   "keywords": [
